--- a/pemrograman-python/isi/02-02-dasar-dasar-python.adoc
+++ b/pemrograman-python/isi/02-02-dasar-dasar-python.adoc
@@ -2,21 +2,21 @@
 
 === Identifier / Nama
 
-Saat memprogram menggunakan Python, seorang programmer harus berurusan dengan nama / identifier, misalnya nama variabel, nama kelas, dan lain-lain. Berikut adalah ketentuan nama yang sah di Python:
+Saat memprogram menggunakan Python, seorang pemrogram harus berurusan dengan nama / identifier, misalnya nama variabel, nama kelas, dan lain-lain. Berikut adalah ketentuan nama yang sah di Python:
 
-* Bukan merupakan kata kunci / keyword di Python
+* Bukan merupakan kata kunci / _keyword_ di Python
 * Membedakan huruf besar dan kecil
 * Tidak boleh dimulai dengan digit (0-9)
 * Digit hanya boleh setelah karakter pertama
 * Boleh huruf besar atau kecil
-* Karakter yang diperbolehkan: underscore (_). 
+* Karakter yang diperbolehkan: _underscore_ (_). 
 * Tidak boleh menggunakan karakter-karakter yang sudah ada di Python untuk keperluan tertentu (misalnya asterisk / + -).
 
 Meskipun tidak ada aturan, di kalangan pemrogram Python, biasanya digunakan konvensi berikut ini:
 
-* Nama modul harus huruf kecil, jika diperlukan bisa menggunakan underscore. 
-* Nama variabel dan nama fungsi / method harus huruf kecil dan menggunakan underscore jika terdiri atas 2 kata atau lebih.
-* Nama kelas harus CamelCase. 
+* Nama modul harus huruf kecil, jika diperlukan bisa menggunakan _underscore_. 
+* Nama variabel dan nama fungsi / _method_ harus huruf kecil dan menggunakan _underscore_ jika terdiri atas 2 kata atau lebih.
+* Nama kelas harus *CamelCase*. 
 * Konstanta harus huruf besar semua.
 
 Contoh:
@@ -85,11 +85,11 @@ Baris(-baris) tertentu dalam kode sumber Python biasanya digunakan untuk membuat
 [source,python]
 ----
 # komentar satu baris penuh
-print(‘abc’) # komentar mulai kolom tertentu
-“”” komentar
+print("abc") # komentar mulai kolom tertentu
+""" komentar
 Lebih dari
 satu baris
-“””
+"""
 ----
 
 === Variabel dan Tipe Data Dasar
@@ -98,7 +98,7 @@ Variabel adalah nama yang digunakan untuk menyimpan suatu nilai. Nama ini nantin
 
 [,python]
 ----
-Nama_var = nilai
+nama_var = nilai
 
 var01 = 20
 var_02 = 30
@@ -145,7 +145,7 @@ Python adalah bahasa pemrograman yang termasuk dalam kategori *dynamic typing*, 
 >>> var2 = var1 + 2
 >>> var2
 145
->>> var1 = 'Wabi Teknologi'
+>>> var1 = 'Zimera Corp'
 >>> var2 = var1 + 2
 Traceback (most recent call last):
   File "<stdin>", line 1, in <module>
